# api.video-rtmpdroid

./: CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle  gradle.properties  index.html  navigation.html  settings.gradle
.github/workflows/: build.yml  release.yml  test.yml  update-documentation.yml
api.video rtmpdroid library/: package-list
api.video rtmpdroid library/video.api.rtmpdroid/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf.models/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf.models/-ecma-array/: -ecma-array.html  add.html  index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf.models/-named-parameter/: -named-parameter.html  index.html  name.html  value.html
api.video rtmpdroid library/video.api.rtmpdroid.amf.models/-null-parameter/: -null-parameter.html  index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf.models/-object-parameter/: -object-parameter.html  add.html  index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-encoder/: -amf-encoder.html  add.html  encode.html  index.html  min-buffer-size.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-encoder/-companion/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-type/: index.html  value-of.html  value.html  values.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-type/-b-o-o-l-e-a-n/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-type/-e-c-m-a_-a-r-r-a-y/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-type/-n-u-l-l/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-type/-n-u-m-b-e-r/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-type/-o-b-j-e-c-t/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-type/-o-b-j-e-c-t_-e-n-d/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.amf/-amf-type/-s-t-r-i-n-g/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.internal/: index.html
api.video rtmpdroid library/video.api.rtmpdroid.internal/-ex-video-codecs/: -ex-video-codecs.html  has-codec.html  index.html  supported-codecs.html  value.html
api.video rtmpdroid library/video.api.rtmpdroid.internal/-ex-video-codecs/-companion/: from-mime-types.html  index.html  is-supported-codec.html
api.video rtmpdroid library/video.api.rtmpdroid.internal/-video-codecs/: -video-codecs.html  has-codec.html  index.html  supported-codecs.html  value.html
api.video rtmpdroid library/video.api.rtmpdroid.internal/-video-codecs/-companion/: from-mime-types.html  index.html  is-supported-codec.html
api.video rtmpdroid library/video.api.rtmpdroid/-packet-type/: index.html  value-of.html  value.html  values.html
api.video rtmpdroid library/video.api.rtmpdroid/-packet-type/-c-o-m-m-a-n-d/: index.html
api.video rtmpdroid library/video.api.rtmpdroid/-rtmp/: -rtmp.html  close.html  connect-stream.html  connect.html  delete-stream.html  index.html  is-connected.html  pause.html  read-packet.html  read.html  resume.html  serve.html  supported-video-codecs.html  timeout.html  write-packet.html  write.html
api.video rtmpdroid library/video.api.rtmpdroid/-rtmp-native-loader/: index.html
api.video rtmpdroid library/video.api.rtmpdroid/-rtmp-packet/: -rtmp-packet.html  buffer.html  channel.html  header-type.html  index.html  packet-type.html  timestamp.html
api.video rtmpdroid library/video.api.rtmpdroid/-rtmp/-companion/: index.html
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle  consumer-rules.pro  maven-push.gradle
lib/src/androidTest/java/video/api/rtmpdroid/: Extensions.kt  RtmpMessageTest.kt  RtmpServer.kt  RtmpTest.kt
lib/src/androidTest/java/video/api/rtmpdroid/amf/: AmfEncoderTest.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  Log.h  RTMPWrapper.h  glue.cpp
lib/src/main/cpp/models/: RtmpContext.h  RtmpPacket.h  RtmpWrapper.h
lib/src/main/cpp/patches/: 0001-Port-to-openssl-1.1.1.patch  0002-Add-CMakeLists.txt.patch  0003-Fix-AMF_EncodeString-size-check.patch  0004-Modernize-socket-API-usage.patch  0005-Shutdown-socket-on-close-to-interrupt-socket-connect.patch  0006-Add-support-for-enhanced-RTMP.patch  0007-When-packet-are-not-in-order-force-the-header-of-typ.patch
lib/src/main/java/video/api/rtmpdroid/: Rtmp.kt  RtmpNativeLoader.kt  RtmpPacket.kt
lib/src/main/java/video/api/rtmpdroid/amf/: AmfEncoder.kt
lib/src/main/java/video/api/rtmpdroid/amf/models/: EcmaArray.kt  NamedParameter.kt  NullParameter.kt  ObjectParameter.kt
lib/src/main/java/video/api/rtmpdroid/internal/: VideoCodecs.kt
lib/src/test/java/video/api/rtmpdroid/internal/: ExVideoCodecsTest.kt  VideoCodecsTest.kt
scripts/: pages.json  sourceset_dependencies.js
